Validating index name when creating an index